# CSE399_ML

./: .gitignore  202505_cht.ods  202506_cht.ods  202507_cht.ods  README.md  data_api.py  main.ipynb  pyproject.toml
FinalProject/: README.md  data_preprocess.py
HW1/: Q1.py  p1_1.py  p1_2.py
HW1/apis/: data_api.py
HW1/p1/: p1_a.py  p1_b.py  p1_c.py  p1_d.md
HW1/p2/: p2.py
