[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "odfpy>=1.4.1",
    "pandas>=2.3.2",
    "requests>=2.32.5",
]

[project.scripts]
p1_1 = "HW1.p1_1:main"
p1_2 = "HW1.p1_2:main"
p1_3 = "HW1.p1_3:main"
p1_4 = "HW1.p1_4:main"
