[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "odfpy>=1.4.1",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[project.scripts]
p1_1 = "HW1.p1.p1_a:main"
p1_2 = "HW1.p1.p1_b:main"
p1_3 = "HW1.p1.p1_c:main"
p1_4 = "HW1.p1.p1_d:main"
p2 = "HW1.p2.p2:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["HW1"]
